eXosip2 (3.0.2)
	* initial support for ucos.
	* add support for qop authentication.
	* remove registration context immediatly upon eXosip_register_remove.
	* TCP: fix missing Contact in INVITE sent.
	* TCP: fix missing "transport" in Contact for answers within dialog.
	* TCP: fix possible race conditions.
	
eXosip2 (3.0.1)
	* add Windows CE support with Visual Studio 2005
	  (WM5.0,PocketPC 2003/2005, Smartphone)
	* Update to osip2-3.0.1
	* Add SRV record capabilities.
	* add new OPTIONS: do not send 101, remove pre-route set from message.
	
eXosip2 (2.2.3)
	* announce NOTIFY answers to application.
	* fix authentication bugs from previous patch.
	* fix TCP bug
	* fix using code 699
	
eXosip2 (2.2.2)
	* new version synchronized with osip2
	* total rewrite of eXosip.
	*   -> new API for more flexibility
	*   ->   media negotiation must now be handled outside of eXosip2

eXosip (0.9.1)
	* add publish support through a nice API.
	
eXosip (0.9.0)
	* improve presence support (busy, away, onthephone...).
	* new eXosip_automatic_refresh() to refresh SUBSCRIBE and REGISTER.
	* Fix dialog establishement when receiving NOTIFYs.
	* This ChangeLog has not been updated seriously... Many changes
	* have been done but they don't appear here. Sorry.
	* status of libexosip:
	*   call transfer : OK
	*   redirection of calls (3XX) : OK
	*   SUB/NOTIFY for presence : nearly OK (usable)
	*   authenthication (REGISTER and INVITE only) : ok
	
eXosip (0.8.0)
	* fix processing of 180 Ringing?
	* fix bug when BYE is processed before a 2xx for INVITE.
	
eXosip (0.7.7)
	* memory leaks.
	* tiny bugs, code clean-up.
	
eXosip (0.7.6)
	* fix bug when 1st proxy is using strict routing.
	* support for IPv4 and IPv6.
	* do not send 180 Ringing any more on new INVITEs.
	* close correctly rtp streams in josua.
	* improve the eXosip_event_wait method.
	* performance updated on win32 for event handling.
	
eXosip (0.7.5)
	* small improvements for josua.
	* patch for IPv6 (uncomplete)