@@ -475,8 +475,6 @@ eXosip_dns_get_local_fqdn (char **servername, char **serverip,
   return 0;
 }
 
-#if 1
-
 int
 eXosip_guess_ip_for_via (int family, char *address, int size)
 {
@@ -525,198 +523,6 @@ eXosip_guess_ip_for_via (int family, char *address, int size)
   
   return 0;
 }
-
-#else
-
-int
-eXosip_guess_ip_for_via (int family, char *address, int size)
-{
-  /* w2000 and W95/98 */
-  unsigned long best_interface_index;
-  DWORD hr;
-
-  /* NT4 (sp4 only?) */
-  PMIB_IPFORWARDTABLE ipfwdt;
-  DWORD siz_ipfwd_table = 0;
-  unsigned int ipf_cnt;
-
-  address[0] = '\0';
-  best_interface_index = -1;
-  /* w2000 and W95/98 only */
-
-  hr = GetBestInterface (inet_addr (eXosip.ipv4_for_gateway), &best_interface_index);
-  if (hr)
-    {
-      LPVOID lpMsgBuf;
-
-      FormatMessage (FORMAT_MESSAGE_ALLOCATE_BUFFER |
-                     FORMAT_MESSAGE_FROM_SYSTEM |
-                     FORMAT_MESSAGE_IGNORE_INSERTS,
-                     NULL,
-                     hr,
-                     MAKELANGID (LANG_NEUTRAL, SUBLANG_DEFAULT),
-                     (LPSTR) & lpMsgBuf, 0, NULL);
-
-      OSIP_TRACE (osip_trace (__FILE__, __LINE__, OSIP_INFO4, NULL,
-                              "GetBestInterface: %s\r\n", lpMsgBuf));
-      best_interface_index = -1;
-    }
-
-  if (best_interface_index != -1)
-    {                           /* probably W2000 or W95/W98 */
-      char *servername;
-      char *serverip;
-      char *netmask;
-
-      OSIP_TRACE (osip_trace (__FILE__, __LINE__, OSIP_INFO4, NULL,
-                              "Default Interface found %i\r\n",
-                              best_interface_index));
-
-      if (0 == eXosip_dns_get_local_fqdn (&servername, &serverip, &netmask,
-                                       best_interface_index))
-        {
-          osip_strncpy (address, serverip, size - 1);
-          osip_free (servername);
-          osip_free (serverip);
-          osip_free (netmask);
-          return 0;
-        }
-      return -1;
-    }
-
-
-  if (!GetIpForwardTable (NULL, &siz_ipfwd_table, FALSE) ==
-      ERROR_INSUFFICIENT_BUFFER
-      || !(ipfwdt = (PMIB_IPFORWARDTABLE) alloca (siz_ipfwd_table)))
-    {
-      OSIP_TRACE (osip_trace (__FILE__, __LINE__, OSIP_INFO4, NULL,
-                              "Allocation error\r\n"));
-      return -1;
-    }
-
-
-  /* NT4 (sp4 support only?) */
-  if (!GetIpForwardTable (ipfwdt, &siz_ipfwd_table, FALSE))
-    {
-      for (ipf_cnt = 0; ipf_cnt < ipfwdt->dwNumEntries; ++ipf_cnt)
-        {
-          if (ipfwdt->table[ipf_cnt].dwForwardDest == 0)
-            {                   /* default gateway found */
-              char *servername;
-              char *serverip;
-              char *netmask;
-
-              OSIP_TRACE (osip_trace (__FILE__, __LINE__, OSIP_INFO4, NULL,
-                                      "Default Interface found %i\r\n",
-                                      ipfwdt->table[ipf_cnt].dwForwardIfIndex));
-
-              if (0 == eXosip_dns_get_local_fqdn (&servername,
-                                               &serverip,
-                                               &netmask,
-                                               ipfwdt->table[ipf_cnt].
-                                               dwForwardIfIndex))
-                {
-                  osip_strncpy (address, serverip, size);
-                  osip_free (servername);
-                  osip_free (serverip);
-                  osip_free (netmask);
-                  return 0;
-                }
-              return -1;
-            }
-        }
-
-    }
-
-  OSIP_TRACE (osip_trace (__FILE__, __LINE__, OSIP_WARNING, NULL,
-                          "Please define a default network interface.\r\n"));
-#ifdef WANT_INTERFACE_ANYWAY
-
-
-  /* NT4 (sp4 support only?) */
-  if (!GetIpForwardTable (ipfwdt, &siz_ipfwd_table, FALSE))
-    {
-      for (ipf_cnt = 0; ipf_cnt < ipfwdt->dwNumEntries; ++ipf_cnt)
-        {
-          char *servername;
-          char *serverip;
-          char *netmask;
-
-          OSIP_TRACE (osip_trace (__FILE__, __LINE__, OSIP_INFO4, NULL,
-                                  "Default Interface found %i\r\n",
-                                  ipfwdt->table[ipf_cnt].dwForwardIfIndex));
-
-          if (0 == eXosip_dns_get_local_fqdn (&servername,
-                                           &serverip,
-                                           &netmask,
-                                           ipfwdt->table[ipf_cnt].
-                                           dwForwardIfIndex))
-            {
-              /* search for public */
-              if (eXosip_is_public_address (serverip) == 0)
-                {
-                  osip_strncpy (address, serverip, size);
-                  osip_free (servername);
-                  osip_free (serverip);
-                  osip_free (netmask);
-                  return 0;
-                }
-              osip_free (servername);
-              osip_free (serverip);
-              osip_free (netmask);
-            }
-        }
-    }
-
-  OSIP_TRACE (osip_trace (__FILE__, __LINE__, OSIP_INFO2, NULL,
-                          "No public interface found. searching private\r\n"));
-
-  /* NT4 (sp4 support only?) */
-  if (!GetIpForwardTable (ipfwdt, &siz_ipfwd_table, FALSE))
-    {
-      for (ipf_cnt = 0; ipf_cnt < ipfwdt->dwNumEntries; ++ipf_cnt)
-        {
-          char *servername;
-          char *serverip;
-          char *netmask;
-
-          OSIP_TRACE (osip_trace (__FILE__, __LINE__, OSIP_INFO4, NULL,
-                                  "Default Interface found %i\r\n",
-                                  ipfwdt->table[ipf_cnt].dwForwardIfIndex));
-
-          if (0 == eXosip_dns_get_local_fqdn (&servername,
-                                           &serverip,
-                                           &netmask,
-                                           ipfwdt->table[ipf_cnt].
-                                           dwForwardIfIndex))
-            {
-              osip_strncpy (address, serverip, size);
-              osip_free (servername);
-              osip_free (serverip);
-              osip_free (netmask);
-              return 0;
-            }
-        }
-    }
-
-  {
-    char *lo = osip_strdup ("127.0.0.1");
-
-    osip_strncpy (address, lo, size);
-    osip_free (lo);
-    return 0;
-  }
-
-  OSIP_TRACE (osip_trace (__FILE__, __LINE__, OSIP_INFO2, NULL,
-                          "No interface found. returning 127.0.0.1\r\n"));
-  /* no default gateway interface found */
-  return 0;
-#else
-  return -1;
-#endif /* WANT_INTERFACE_ANYWAY */
-}
-
-#endif
 
 #else /* sun, *BSD, linux, and other? */
 
@@ -867,124 +673,6 @@ ppl_dns_default_gateway_ipv6 (char *address, int size)
   return 0;
 }
 
-#endif
-
-#ifdef SM
-
-int
-eXosip_get_localip_for (const char *address_to_reach, char *loc, int size)
-{
-  int err, tmp;
-  struct addrinfo hints;
-  struct addrinfo *res = NULL;
-  struct sockaddr_storage addr;
-  int sock;
-
-#ifdef __APPLE_CC__
-  int s;
-#else
-  socklen_t s;
-#endif
-#ifdef MAXHOSTNAMELEN
-  if (size > MAXHOSTNAMELEN)
-    size = MAXHOSTNAMELEN;
-#else
-  if (size > 256)
-    size = 256;
-#endif
-  if (eXosip.forced_localip)
-    {
-      if (size > sizeof (eXosip.net_interfaces[0].net_firewall_ip))
-        size = sizeof (eXosip.net_interfaces[0].net_firewall_ip);
-      strncpy (loc, eXosip.net_interfaces[0].net_firewall_ip, size);
-      return 0;
-    }
-
-  strcpy (loc, "127.0.0.1");    /* always fallback to local loopback */
-
-  memset (&hints, 0, sizeof (hints));
-  if(ipv6_enable)
-    hints.ai_family = PF_INET6;
-  else
-    hints.ai_family = PF_INET;    /* ipv4 only support */
-
-  hints.ai_socktype = SOCK_DGRAM;
-  /*hints.ai_flags=AI_NUMERICHOST|AI_CANONNAME; */
-  err = getaddrinfo (address_to_reach, "5060", &hints, &res);
-  if (err != 0)
-    {
-      eXosip_trace (OSIP_ERROR,
-                    ("Error in getaddrinfo for %s: %s\n", address_to_reach,
-                     gai_strerror (err)));
-      return -1;
-    }
-  if (res == NULL)
-    {
-      eXosip_trace (OSIP_ERROR, ("getaddrinfo reported nothing !"));
-      return -1;
-    }
-  sock = socket (res->ai_family, SOCK_DGRAM, 0);
-  tmp = 1;
-  err =
-    setsockopt (sock, SOL_SOCKET, SO_REUSEADDR, (const char *) &tmp, sizeof (int));
-  if (err < 0)
-    {
-      eXosip_trace (OSIP_ERROR, ("Error in setsockopt: %s\n", strerror (errno)));
-      eXosip_freeaddrinfo (res);
-      close (sock);
-      return -1;
-    }
-  err = connect (sock, res->ai_addr, res->ai_addrlen);
-  if (err < 0)
-    {
-      eXosip_trace (OSIP_ERROR, ("Error in connect: %s\n", strerror (errno)));
-      eXosip_freeaddrinfo (res);
-      close (sock);
-      return -1;
-    }
-  eXosip_freeaddrinfo (res);
-  res = NULL;
-  s = sizeof (addr);
-  err = getsockname (sock, (struct sockaddr *) &addr, &s);
-  if (err != 0)
-    {
-      eXosip_trace (OSIP_ERROR, ("Error in getsockname: %s\n", strerror (errno)));
-      close (sock);
-      return -1;
-    }
-
-  err =
-    getnameinfo ((struct sockaddr *) &addr, s, loc, size, NULL, 0, NI_NUMERICHOST);
-  if (err != 0)
-    {
-      eXosip_trace (OSIP_ERROR, ("getnameinfo error:%s", strerror (errno)));
-      close (sock);
-      return -1;
-    }
-  close (sock);
-  eXosip_trace (OSIP_INFO1,
-                ("Outgoing interface to reach %s is %s.\n", address_to_reach,
-                 loc));
-  return 0;
-}
-
-
-void
-eXosip_get_localip_from_via (osip_message_t * mesg, char *locip, int size)
-{
-  osip_via_t *via = NULL;
-  char *host;
-
-  via = (osip_via_t *) osip_list_get (mesg->vias, 0);
-  if (via == NULL)
-    {
-      host = "15.128.128.93";
-      eXosip_trace (OSIP_ERROR, ("Could not get via:%s"));
-  } else
-    host = via->host;
-  eXosip_get_localip_for (host, locip, size);
-
-}
 #endif
 
 char *
