@@ -87,9 +87,6 @@ eXosip_notify_init (eXosip_notify_t ** jn, osip_message_t * inc_subscribe)
   int i;
   char locip[50];
 
-#ifdef SM
-  eXosip_get_localip_from_via (inc_subscribe, locip, 49);
-#else
   i = _eXosip_find_protocol (inc_subscribe);
   memset(locip, '\0', sizeof(locip));
   if (i == IPPROTO_UDP)
@@ -107,7 +104,6 @@ eXosip_notify_init (eXosip_notify_t ** jn, osip_message_t * inc_subscribe)
       return -1;
     }
 
-#endif
   if (inc_subscribe == NULL
       || inc_subscribe->to == NULL || inc_subscribe->to->url == NULL)
     return -1;
